variables.Variables.scala.error
Compilation error:
Variables:4: error: not found: value &&
if (isOverBaggle() == false) && (isCarryingBaggle()=false) {
                             ^Variables:4: error: value update is not a member of Boolean
if (isOverBaggle() == false) && (isCarryingBaggle()=false) {
                                 ^